--- a/react_w1/src/component/list/style.css
+++ b/react_w1/src/component/list/style.css
@@ -1,10 +1,12 @@
 .list-container {
+    height: 551px;
+    width: 994px;
     padding: 0 24px;
   }
   
   
   .list-wrapper {
-    flex-wrap: wrap;
+    flex-wrap: flex;
     gap: 12px;
     display: flex;
   }
