--- a/react_w1/src/component/form/style.css
+++ b/react_w1/src/component/form/style.css
@@ -31,26 +31,15 @@
   
   }
   
-  .input-group, .add-form {
+  .input-group, .form_box {
     gap: 20px;
     align-items: center;
     display: flex;
   }
   
-  .add-input1, .add-input2 {
+  .input1, .input2 {
     height: 40px;
     width: 240px;
     border: none;
     border-radius: 12px;
-  }
-
-  .add-button{
-    background-color: teal;
-    border: none;
-    border-radius: 10px;
-    font-weight: 700;
-    height: 40px;
-    width: 140px;
-    color: white;
-    
   }
